--- a/build.gradle
+++ b/build.gradle
@@ -1,57 +1,75 @@
+// plugins {
+//   id "com.github.spotbugs" version "1.6.11"
+// }
+
+
 plugins {
-    id "com.github.spotbugs" version "3.0.0"
-    id "checkstyle"
+    id 'pmd'
 }
+
+
 
 apply plugin: 'application'
 apply plugin: 'jacoco'
-//apply plugin: 'com.github.spotbugs'
+
 
 mainClassName = 'main.java.Main'
 
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
+
     compile "junit:junit:4.12"
     compile files('cls/')
 }
 
-///////////////////////////////////////////////////////////////////////
+apply plugin: "pmd"
+pmd {
+  ignoreFailures = true 
+  sourceSets = [sourceSets.main]
+  reportsDir = file("$project.buildDir/reports/pmd")
+  ruleSets = []
+  ruleSetConfig = resources.text.fromFile('ruleset.xml')
+}
+
+/////////////////////////////////////////////////////////////////////////
 // Configure Checkstyle
-/////////////////////////////////////////////////////////////////////
-apply plugin: 'checkstyle'
-checkstyle {
-  // Keep checkstyle a little quieter
-  ignoreFailures = true
-  showViolations = false
-}
-
-tasks.withType(Checkstyle) {
-  reports {
-    html.enabled = true
-    xml.enabled = false
-  }
-}
-checkstyle {
-    toolVersion = "8.8"
-}
-
-
 /////////////////////////////////////////////////////////////////////////
+// apply plugin: 'checkstyle'
+// checkstyle {
+//   // Keep checkstyle a little quieter
+//   ignoreFailures = true
+//   showViolations = false
+// }
+
+// tasks.withType(Checkstyle) {
+//   reports {
+//     html.enabled = true
+//     xml.enabled = false
+//   }
+// }
+// checkstyle {
+//     toolVersion = "8.8"
+// }
+
+
+///////////////////////////////////////////////////////////////////////////
 // Configure SpotBugs
-/////////////////////////////////////////////////////////////////////////
- // To generate an HTML report instead of XML
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
-  reports {
-    xml.enabled = false
-    html.enabled = true
-  }
-}
-spotbugs { 
-    toolVersion = '4.0.1'
-}
+///////////////////////////////////////////////////////////////////////////
+
+// spotbugs {
+//   toolVersion = '3.1.12'
+// }
+
+// // To generate an HTML report instead of XML
+// tasks.withType(com.github.spotbugs.SpotBugsTask) {
+//   reports {
+//     xml.enabled = false
+//     html.enabled = true
+//   }
+// }
